@@ -45,13 +45,11 @@
       <artifactId>lombok</artifactId>
       <version>1.18.8</version>
     </dependency>
-
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
       <version>1.3.0.Final</version>
     </dependency>
-
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct-processor</artifactId>
@@ -70,6 +68,7 @@
     <threadCountClasses>1</threadCountClasses>
     <threadCountMethods>1</threadCountMethods>
     <finalName.mobile>${project.artifactId}-${project.version}-mobile</finalName.mobile>
+    <user.dir>${project.build.directory}</user.dir>
   </properties>
 
   <!-- Build Settings -->
@@ -134,7 +133,10 @@
               <goal>run</goal>
             </goals>
             <configuration>
-
+              <options combine.children="append">
+                <option>--add-opens</option>
+                <option>java.base/java.lang=spring.core</option>
+              </options>
             </configuration>
           </execution>
         </executions>
@@ -198,6 +200,8 @@
             <artifactId>javafx-maven-plugin</artifactId>
             <configuration>
               <options>
+                <option>-Duser.dir=${project.build.directory}</option>
+                <option>-DskipUpdate=true</option>
                 <option>-Xdebug</option>
                 <option>-Xrunjdwp:server=y,transport=dt_socket,address=*:8000,suspend=y</option>
               </options>
